--- a/impressum.html
+++ b/impressum.html
@@ -21,140 +21,47 @@
 <link rel="apple-touch-icon" sizes="152x152" href="Favicon_pink_152px.png">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
-      background: #f1c1db;
-      color: #2d1a45;
-      min-height: 100vh;
-      cursor: none;
-      padding: 2.5rem 1.5rem;
-      font-size: 1.08rem;
-      line-height: 1.7;
-      text-align: left;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    h1 {
-      font-family: 'Anton', Impact, 'Arial Black', sans-serif;
-      color: #2d1a45;
-      font-size: 2.2rem;
-      margin-bottom: 2rem;
-      letter-spacing: -0.01em;
-      text-align: left;
-    }
-    h2, b, strong {
-      font-family: 'Helvetica Neue', Arial, sans-serif;
-      color: #2d1a45;
-      font-size: 1.15rem;
-      font-weight: 700;
-      margin-top: 2.2rem;
-      margin-bottom: 0.7rem;
-      letter-spacing: 0;
-      text-align: left;
-      display: block;
-    }
-    ul, ol {
-      margin-left: 1.2rem;
-      display: block;
-      text-align: left;
-    }
-    li { margin-bottom: 0.5rem; }
-    a { color: #2d1a45; text-decoration: underline; }
-    p { text-align: left; }
-
-    /* Navigation */
-    .navbar {
-      position: fixed;
-      top: 2rem;
-      right: 2rem;
-      background: none;
-      padding: 0;
-      z-index: 999;
-      box-shadow: none;
-    }
-    .nav-inner {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      justify-content: center;
-      max-width: none;
-      margin: 0;
-      gap: 2rem;
-    }
-    .nav-links {
-      list-style: none;
-      display: flex;
-      flex-direction: column;
-      gap: 0.7rem;
-      justify-content: center;
-      align-items: flex-end;
-      padding: 0;
-      margin: 0;
-    }
-.nav-links a {
-  text-decoration: none;
-  color: #f1c1db;           /* rosa Schrift */
-  font-weight: 300;
-  font-size: 1.1rem;
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
-  letter-spacing: normal;
-  transition: all 0.3s ease;
-  text-shadow: none;
-  background-color: #2d1a45; /* dunkellila Hintergrund */
-  padding: 0.6rem 1.2rem;
-  border-radius: 0px;
-  min-width: 100px;
-  text-align: right;
+/* --- Reset & Grundlayout --- */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body {
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  background: #f1c1db;
+  color: #2d1a45;
+  min-height: 100vh;
+  cursor: none;
+  padding: 2.5rem 1.5rem;
+  font-size: 1.08rem;
+  line-height: 1.7;
+  text-align: left;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
 }
-    .nav-links a:hover {
-      opacity: 1;
-      transform: none;
-    }
 
-    #cursor {
-      --color: #fff;
-      position: fixed;
-      width: 30px;
-      height: 30px;
-      pointer-events: none;
-      z-index: 10000;
-      visibility: visible;
-      background-image: linear-gradient(to right, var(--color) 10px, transparent 0),
-        linear-gradient(to bottom, var(--color) 10px, transparent 0),
-        linear-gradient(to left, var(--color) 10px, transparent 0),
-        linear-gradient(to bottom, var(--color) 10px, transparent 0),
-        linear-gradient(to right, var(--color) 10px, transparent 0),
-        linear-gradient(to top, var(--color) 10px, transparent 0),
-        linear-gradient(to left, var(--color) 10px, transparent 0),
-        linear-gradient(to top, var(--color) 10px, transparent 0);
-      background-repeat: no-repeat;
-      background-position: top left, top left, top right, top right, bottom left, bottom left, bottom right, bottom right;
-      background-size: 20px 2px, 2px 20px, 20px 2px, 2px 20px, 20px 2px, 2px 20px,
-        20px 2px, 2px 20px;
-      opacity: 1 !important;
-      left: 0; top: 0;
-      transition: none;
-    }
-    #cursorPt {
-      position: fixed;
-      width: 7px;
-      height: 7px;
-      pointer-events: none;
-      z-index: 9999;
-      background: #fff;
-      border-radius: 50%;
-      visibility: visible;
-      left: 0;
-      top: 0;
-      transition: none;
-    }
-    @media (max-width: 700px) {
-      body { padding: 1.2rem 0.7rem; max-width: 98vw; }
-      .navbar { top: 1rem; right: 1rem; }
-    }
-    /* Burger-Menü für mobil */
+/* --- Navigation --- */
+.navbar {
+  position: fixed;
+  top: 2rem;
+  right: 2rem;
+  left: auto;
+  background: none;
+  padding: 0;
+  z-index: 999;
+  box-shadow: none;
+  width: auto;
+  max-width: none;
+  pointer-events: auto;
+}
+.nav-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  max-width: none;
+  margin: 0;
+  gap: 2rem;
+}
 .menu-toggle {
   display: none;
   font-size: 1.2rem;
@@ -178,73 +85,231 @@
   display: block;
   width: 24px;
   height: 2px;
-  background: #2d1a45;
+  background: #2d1a45; /* oder Wunschfarbe */
   border-radius: 2px;
   transition: all 0.3s;
   margin: 2.5px 0;
 }
+.nav-links {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 0;
+  margin: 0;
+}
+.nav-links li {
+  padding: 0;
+  margin: 0;
+}
+.nav-links a {
+  text-decoration: none;
+  color: #f1c1db; /* oder Wunschfarbe */
+  font-weight: 300;
+  font-size: 1.1rem;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  letter-spacing: normal;
+  transition: all 0.3s ease;
+  text-shadow: none;
+  background-color: #2d1a45; /* oder Wunschfarbe */
+  padding: 0.6rem 1.2rem;
+  border-radius: 0px;
+  min-width: 100px;
+  text-align: right;
+}
+.nav-links a:hover {
+  opacity: 1;
+  color: inherit;
+  background: inherit;
+  transform: none;
+}
+.nav-links a,
+.nav-links a:hover,
+.nav-links a:active,
+.nav-links a:focus {
+  color: #f1c1db !important;
+  background: #2d1a45 !important;
+  text-decoration: none !important;
+  box-shadow: none !important;
+  outline: none !important;
+  opacity: 1 !important;
+  transition: none !important;
+}
+
+.main-content h1 {
+  font-family: 'Anton', Arial, sans-serif;
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: #2d1a45;
+  margin-top: 2.5rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.2;
+}
+
+.main-content h2,
+.main-content h3 {
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-weight: 700;
+  color: #2d1a45;
+}
+
+.main-content h2 {
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  line-height: 1.3;
+}
+
+.main-content h3 {
+  font-size: 1.15rem;
+  margin-top: 1.5rem;
+  margin-bottom: 0.7rem;
+  line-height: 1.4;
+}
+.main-content a,
+.main-content a:visited,
+.main-content a:hover,
+.main-content a:active,
+.main-content a:focus {
+  text-decoration: none;
+  color: #2d1a45; /* oder inherit, je nach Wunsch */
+  background: none;
+  box-shadow: none;
+  outline: none;
+  transition: color 0.2s;
+}
+/* --- Cursor (optional, wie auf index.html) --- */
+#cursor {
+  --color: #fff;
+  position: fixed;
+  width: 30px;
+  height: 30px;
+  pointer-events: none;
+  z-index: 10000;
+  visibility: visible;
+  background-image: linear-gradient(to right, var(--color) 10px, transparent 0),
+    linear-gradient(to bottom, var(--color) 10px, transparent 0),
+    linear-gradient(to left, var(--color) 10px, transparent 0),
+    linear-gradient(to bottom, var(--color) 10px, transparent 0),
+    linear-gradient(to right, var(--color) 10px, transparent 0),
+    linear-gradient(to top, var(--color) 10px, transparent 0),
+    linear-gradient(to left, var(--color) 10px, transparent 0),
+    linear-gradient(to top, var(--color) 10px, transparent 0);
+  background-repeat: no-repeat;
+  background-position: top left, top left, top right, top right, bottom left, bottom left, bottom right, bottom right;
+  background-size: 20px 2px, 2px 20px, 20px 2px, 2px 20px, 20px 2px, 2px 20px,
+    20px 2px, 2px 20px;
+  opacity: 1 !important;
+  left: 0; top: 0;
+  transition: none;
+}
+#cursorPt {
+  position: fixed;
+  width: 7px;
+  height: 7px;
+  pointer-events: none;
+  z-index: 9999;
+  background: #fff;
+  border-radius: 50%;
+  visibility: visible;
+  left: 0;
+  top: 0;
+  transition: none;
+}
+
+/* --- Responsive: Burger-Menü für mobil --- */
 @media (max-width: 700px) {
-   .menu-toggle {
-        display: block;
-        width: 44px;
-        height: 44px;
-        min-width: 44px;
-        min-height: 44px;
-        max-width: 44px;
-        max-height: 44px;
-        font-size: 1.5rem;
-        border-radius: 50%;
-        padding: 0;
-        box-shadow: none;
-        border: none;
-        cursor: pointer;
-        z-index: 2001;
-        position: fixed;
-        top: 1rem;
-        right: 1rem;
-        background: #2d1a45;      /* dunkellila Hintergrund */
-        color: #f1c1db;           /* rosa Schrift */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: background 0.3s, color 0.3s;
+  body { padding: 1.2rem 0.7rem; max-width: 98vw; }
+  .navbar {
+    top: 1rem;
+    right: 1rem;
+    left: auto;
+    width: auto;
+    max-width: none;
+    position: fixed;
+    z-index: 2000;
+  }
+  .menu-toggle {
+    display: block;
+    width: 44px;
+    height: 44px;
+    min-width: 44px;
+    min-height: 44px;
+    max-width: 44px;
+    max-height: 44px;
+    font-size: 1.5rem;
+    border-radius: 50%;
+    padding: 0;
+    box-shadow: none;
+    border: none;
+    cursor: pointer;
+    z-index: 3003;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    background: #2d1a45;      /* oder Wunschfarbe */
+    color: #f1c1db;           /* oder Wunschfarbe */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 0.3s, color 0.3s;
   }
   .menu-toggle .burger-line {
-    background: #f1c1db !important; /* rosa Linien */
+    background: #f1c1db !important; /* oder Wunschfarbe */
   }
   .nav-links {
-        display: none;
-        position: fixed;
-        top: 1rem;
-        right: 1rem;
-        left: auto;
-        flex-direction: column;
-        align-items: flex-end;
-        gap: 1.2rem;
-        background: transparent !important; /* Kein weißer Hintergrund */
-        box-shadow: none;
-        border-radius: 0;
-        padding: 5rem 1rem 2.2rem 2.2rem;
-        z-index: 2002;
-        min-width: 44px;
-        width: auto;
-        height: auto;
-      }
-      .nav-links.open {
-        display: flex;
-      }
-  .nav-links a {
-        font-size: 1.2rem;
-        padding: 0.7rem 1.2rem;
-        min-width: 100px;
-        text-align: right;
-        border-radius: 0rem;
-        font-weight: 600;
-    color: #f1c1db;           /* rosa Schrift */
-    background: #2d1a45;      /* dunkellila Hintergrund */
+    display: none;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    left: auto;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 2rem;
+    box-shadow: none;
+    border-radius: 0;
+    padding: 5rem 1rem 2.2rem 2.2rem;
+    z-index: 2002;
+    min-width: 44px;
+    width: auto;
+    height: auto;
   }
-   #cursor, #cursorPt {
+  .nav-links.open {
+    display: flex;
+  }
+  .nav-links a {
+    font-size: 1.1rem;
+    font-weight: 300;
+    padding: 0.6rem 1.2rem;
+    min-width: 100px;
+    text-align: right;
+    border-radius: 0px;
+    color: #f1c1db;
+    background: #2d1a45;
+  }
+  #cursor, #cursorPt {
     display: none !important;
+  }
+    .main-content h1 {
+    font-size: 1.5rem;
+    margin-top: 1.2rem;
+    margin-bottom: 1rem;
+  }
+  .main-content h2 {
+    font-size: 1.1rem;
+    margin-top: 1.2rem;
+    margin-bottom: 0.7rem;
+  }
+  .main-content h3 {
+    font-size: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  .main-content {
+    font-size: 0.98rem;
+    padding: 1.2rem 0.7rem;
   }
 }
   </style>
@@ -252,48 +317,69 @@
 <body>
   <div id="cursor"></div>
   <div id="cursorPt"></div>
-  <!-- Navbar mit Burger-Menü für mobil -->
-<nav class="navbar">
-  <div class="nav-inner">
-    <div class="menu-toggle">
-      <div class="burger-lines">
-        <div class="burger-line"></div>
-        <div class="burger-line"></div>
-        <div class="burger-line"></div>
+  <!-- NAVBAR KOMMT HIER -->
+  <nav class="navbar">
+    <div class="nav-inner">
+      <div class="menu-toggle">
+        <div class="burger-lines">
+          <div class="burger-line"></div>
+          <div class="burger-line"></div>
+          <div class="burger-line"></div>
+        </div>
       </div>
+      <ul class="nav-links" id="navLinks">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html#leistungen">Leistungen</a></li>
+        <li><a href="index.html#profil">Profil</a></li>
+        <li><a href="index.html#kontakt">Kontakt</a></li>
+      </ul>
     </div>
-    <ul class="nav-links" id="navLinks">
-      <li><a href="index.html#home">Home</a></li>
-      <li><a href="index.html#leistungen">Leistungen</a></li>
-      <li><a href="index.html#profil">Profil</a></li>
-      <li><a href="index.html#kontakt">Kontakt</a></li>
-    </ul>
-  </div>
-</nav>
+  </nav>
+  <!-- DANN ERST DER INHALT IM CONTAINER -->
+  <div class="main-content">
     <h1>Impressum</h1>
-    <p><b>Angaben gemäß § 5 TMG:</b></p>
-    <p>SafeZone Postproduction GmbH<br>
-    ℅ Anica Walz<br>
-    Stargarder Str. 35<br>
-    10437 Berlin</p>
-    <p><b>Vertreten durch:</b>
-    Emily Imhof, Anica Walz</p>
-    <p><b>Kontakt:</b>
-    E-Mail: <a href="mailto:office@safezone-postproduction.de">office@safezone-postproduction.de</a></p>
-    <p><b>Registereintrag:</b>
-    Eintragung im Handelsregister.<br>
-    Registergericht: Amtsgericht Charlottenburg<br>
-    Registernummer: HRB 276247 B</p>
-    <p><b>Umsatzsteuer:</b>
-    Umsatzsteuer-Identifikationsnummer gemäß § 27 a UStG: [wird nachgereicht]</p>
-        <p><b>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</b>
-    SafeZone Postproduction GmbH<br>
-    Stargarder Str. 35<br>
-    10437 Berlin</p>
 
-    <p><b>Fotocredits</b>
-    Foto: Jonas Wresch – <a href="https://www.jonaswresch.com" target="_blank" rel="noopener">www.jonaswresch.com</a>
+    <h2>Angaben gemäß § 5 TMG</h2>
+    <p>
+      SafeZone Postproduction GmbH<br>
+      ℅ Anica Walz<br>
+      Stargarder Str. 35<br>
+      10437 Berlin
     </p>
+
+    <h2>Vertreten durch</h2>
+    <p>Emily Imhof, Anica Walz</p>
+
+    <h2>Kontakt</h2>
+    <p>
+      E-Mail: <a href="mailto:office@safezone-postproduction.de">office@safezone-postproduction.de</a>
+    </p>
+
+    <h2>Registereintrag</h2>
+    <p>
+      Eintragung im Handelsregister.<br>
+      Registergericht: Amtsgericht Charlottenburg<br>
+      Registernummer: HRB 276247 B
+    </p>
+
+    <h2>Umsatzsteuer</h2>
+    <p>
+      Umsatzsteuer-Identifikationsnummer gemäß § 27 a UStG: [wird nachgereicht]
+    </p>
+
+    <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
+    <p>
+      SafeZone Postproduction GmbH<br>
+      Stargarder Str. 35<br>
+      10437 Berlin
+    </p>
+
+    <h2>Fotocredits</h2>
+    <p>
+      Foto: Jonas Wresch – <a href="https://www.jonaswresch.com" target="_blank" rel="noopener">www.jonaswresch.com</a>
+    </p>
+  </div>
+
 <script>
 const cursor = document.getElementById("cursor");
 const cursorPt = document.getElementById("cursorPt");
@@ -344,31 +430,22 @@ document.addEventListener('DOMContentLoaded', function() {
     let rect = trigger.getBoundingClientRect();
     if (exitTween) exitTween.kill();
 
-    // Textbreite bestimmen
-    const textRect = trigger.querySelector('span') 
-      ? trigger.querySelector('span').getBoundingClientRect() 
-      : (() => {
-          const range = document.createRange();
-          range.selectNodeContents(trigger);
-          return range.getBoundingClientRect();
-        })();
+// Optische Mitte berechnen (wie auf index.html)
+const cx = rect.left + rect.width / 2;
+const cy = rect.top + rect.height / 2;
+const dx = e.clientX - cx;
+const dy = e.clientY - cy;
 
-    // Optische Mitte berechnen
-    const cx = textRect.left + textRect.width / 2;
-    const cy = rect.top + rect.height / 2;
-    const dx = e.clientX - cx;
-    const dy = e.clientY - cy;
-
-    enterTween = gsap.to(cursor, {
-      width: rect.width,
-      height: rect.height,
-      scale: 1.1,
-      rotation: 0,
-      x: cx - 16 + dx * 0.09,
-      y: cy - 16 + dy * 0.09,
-      duration: 0.2,
-      ease: "expo.out"
-    });
+enterTween = gsap.to(cursor, {
+  width: rect.width,
+  height: rect.height,
+  scale: 1.1,
+  rotation: 0,
+  x: rect.left + dx * 0.09,
+  y: rect.top + dy * 0.09,
+  duration: 0.2,
+  ease: "expo.out"
+});
   });
   trigger.addEventListener("mousemove", (e) => {
     if (!isOverTrigger) return;
@@ -382,20 +459,20 @@ document.addEventListener('DOMContentLoaded', function() {
           return range.getBoundingClientRect();
         })();
 
-    const factor = 0.09;
-    const cx = textRect.left + textRect.width / 2;
-    const cy = rect.top + rect.height / 2;
-    const dx = e.clientX - cx;
-    const dy = e.clientY - cy;
-    gsap.to(cursor, {
-      x: cx - 16 + dx * factor,
-      y: cy - 16 + dy * factor,
-      width: rect.width,
-      height: rect.height,
-      scale: 1.1,
-      duration: 0.1,
-      ease: "power2.out"
-    });
+const factor = 0.09;
+const cx = rect.left + rect.width / 2;
+const cy = rect.top + rect.height / 2;
+const dx = e.clientX - cx;
+const dy = e.clientY - cy;
+gsap.to(cursor, {
+  x: rect.left + dx * factor,
+  y: rect.top + dy * factor,
+  width: rect.width,
+  height: rect.height,
+  scale: 1.1,
+  duration: 0.1,
+  ease: "power2.out"
+});
   });
     trigger.addEventListener("mouseleave", (e) => {
       isOverTrigger = false;
