--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
 /* Footer Styles */
 .site-footer {
