--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@ body {
   align-items: center;
   padding: 2rem 0 0rem 0;
   flex: 1 0 auto;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .kontakt-headline {
