--- a/impressum.html
+++ b/impressum.html
@@ -220,7 +220,7 @@ body {
 }
 
 /* --- Responsive: Burger-Menü für mobil --- */
-@media (max-width: 700px) {
+@media (max-width: 700px), (pointer: coarse) and (max-height: 500px) {
   body { padding: 1.2rem 0.7rem; max-width: 98vw; }
   .navbar {
     top: 1rem;
@@ -374,7 +374,7 @@ body {
       10437 Berlin
     </p>
 
-    <h2>Fotocredits</h2>
+    <h2>Fotocredit</h2>
     <p>
       Foto: Jonas Wresch – <a href="https://www.jonaswresch.com" target="_blank" rel="noopener">www.jonaswresch.com</a>
     </p>
