--- a/datenschutz.html
+++ b/datenschutz.html
@@ -174,6 +174,9 @@ body {
   margin-bottom: 0.7rem;
   line-height: 1.4;
 }
+.main-content ul {
+  padding-left: 1.6rem; /* Standard ist meist 1.2rem, hier weiter eingerückt */
+}
 .main-content a,
 .main-content a:visited,
 .main-content a:hover,
@@ -227,7 +230,7 @@ body {
 }
 
 /* --- Responsive: Burger-Menü für mobil --- */
-@media (max-width: 700px) {
+@media (max-width: 700px), (pointer: coarse) and (max-height: 500px) {
   body { padding: 1.2rem 0.7rem; max-width: 98vw; }
   .navbar {
     top: 1rem;
@@ -300,12 +303,12 @@ body {
     display: none !important;
   }
     .main-content h1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin-top: 1.2rem;
     margin-bottom: 1rem;
   }
   .main-content h2 {
-    font-size: 1.1rem;
+    font-size: 1rem;
     margin-top: 1.2rem;
     margin-bottom: 0.7rem;
   }
@@ -315,9 +318,12 @@ body {
     margin-bottom: 0.5rem;
   }
   .main-content {
-    font-size: 0.98rem;
+    font-size: 0.8rem;
     padding: 1.2rem 0.7rem;
   }
+  .main-content ul {
+  padding-left: 1.6rem; /* Standard ist meist 1.2rem, hier weiter eingerückt */
+}
 }
   </style>
 </head>
