--- a/index.html
+++ b/index.html
@@ -2474,18 +2474,6 @@ body {
   }
 }
 @media (min-width: 2200px) {
-  html, body {
-    font-size: 1.35em;
-  }
-  .navbar {
-    top: 3.5rem;
-    right: 3.5rem;
-  }
-  .nav-links a {
-    font-size: 1.3rem;
-    padding: 0.7rem 1.3rem;
-    min-width: 120px;
-  }
   #home {
     max-width: 100vw;
     height: 100vh;
@@ -2532,14 +2520,14 @@ body {
   padding: 0;
 }
   .leistungen-headline {
-    font-size: 3.8rem !important;
+    font-size: 4rem !important;
   }
   .headline-flex,
   .headline-word,
   #headline-word-scroll,
   .wechselwort-dummy,
   .headline-static {
-    font-size: 3.8rem !important;
+    font-size: 4rem !important;
   }
     .leistungen-headline {
     display: flex;
@@ -2547,7 +2535,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-top: 14rem;
+    margin-top: 3rem;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
@@ -2565,18 +2553,18 @@ body {
     text-align: center;
   }
   .leistungen-faecher {
-    max-width: 2200px;
+    max-width: 1700px;
     gap: 4rem;
-    margin-bottom: 15rem;
+    margin-bottom: 5rem;
   }
   .faecher-box {
     max-width: 1100px;
     min-width: 600px;
-    height: 420px;
+    height: 370px;
     font-size: 1.5rem;
   }
   .faecher-content {
-    padding: 2.5rem 5rem 2.5rem 5rem;
+    padding: 3.5rem 5.5rem 2.5rem 5.5rem;
   }
   .faecher-title {
     font-size: 2.3rem;
@@ -2584,7 +2572,7 @@ body {
   .faecher-details,
   .faecher-details ul,
   .faecher-details li {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
 .profil-cards-row {
   display: grid;
@@ -2597,42 +2585,43 @@ body {
   justify-content: center; /* <--- Diese Zeile hinzufügen */
   }
   .karte {
-    min-width: 500px;
-    max-width: 500px;
-    height: 650px;
-    font-size: 1.5rem;
+    min-width: 410px;
+    max-width: 410px;
+    height: 580px;
+    font-size: 1.4rem;
   }
   .karte .karten-content {
-    padding: 3rem 2rem 2rem 2.2rem;
+    padding: 4rem 3.5rem 4rem 3.5rem;
   }
   .karte .karten-title {
-    font-size: 2.8rem;
+    font-size: 3rem;
   }
   .karte .karten-meta {
-    font-size: 1.3rem;
+    font-size: 1.6rem;
   }
   .karte .karten-body {
     font-size: 1.4rem;
+    line-height: 1.5;
   }
   .kontakt-img {
-    max-width: 1400px;
+    max-width: 1100px;
     width: 95vw;
   }
   .kontakt-flex-row {
-    max-width: 1400px;
+    max-width: 1100px;
     gap: 4rem;
   }
   .kontakt-name,
   .kontakt-role,
   .kontakt-tel {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
   }
   .kontakt-mail {
-    font-size: 2rem;
+    font-size: 1.4rem;
   }
   .footer-link {
-    font-size: 1.5rem;
-    padding: 1.5rem 4rem;
+    font-size: 1.4rem;
+    padding: 1rem 4rem;
   }
   .scroll-arrow-btn#scrollDownBtn,
   .scroll-arrow-btn#scrollUpBtn {
@@ -2646,8 +2635,8 @@ body {
     height: 60px;
   }
   #cursorPt {
-    width: 16px;
-    height: 16px;
+    width: 7px;
+    height: 7px;
   }
 }
   </style>
