--- a/index.html
+++ b/index.html
@@ -2680,9 +2680,8 @@ body {
     preload="auto"
   >
     <source src="Logo_Hero_pink.mp4" type="video/mp4">
-    <img src="Logo_Hero_pink.png" alt="Logo" />
   </video>
-  <img id="logoAdhsImg" src="" style="display:none;position:absolute;top:0;left:0;width:600px;height:343px;z-index:2;object-fit:contain;" alt="Logo" />
+  <img id="logoAdhsImg" src="" style="display:none;position:absolute;top:0;left:0;width:600px;height:343px;z-index:2;object-fit:contain;" />
 </div>
     </div>
   </section>
@@ -2881,7 +2880,7 @@ body {
     </a>
   </div>
   <div class="kontakt-img-wrapper">
-    <img src="SafeZone_Postproduction.jpg" alt="Anica Walz und Emily Imhof" class="kontakt-img" />
+    <img src="SafeZone_Postproduction.jpg" class="kontakt-img" />
   </div>
   <div class="kontakt-flex-row">
     <div class="kontakt-person kontakt-person-anica">
