--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <!-- Google Fonts optimiert laden -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@300;400;500&family=Inter:wght@400&display=swap" rel="stylesheet">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5JKHZKH68D"></script>
 <script>
@@ -15,7 +19,6 @@
   <title>SafeZone Postproduction</title>
   <meta name="description" content="Postproduktion für Bewegtbild mit Fokus auf Versionierung, Animation, Adaption uvm. – SafeZone Postproduction" />
   <meta name="robots" content="index, follow" />
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@300;400;500&family=Inter:wght@400&display=swap" rel="stylesheet">
 <!-- Standard-Favicon für Browser -->
 <link rel="icon" type="image/png" sizes="48x48" href="Favicon_pink_48px.png">
 
@@ -2631,8 +2634,8 @@ body {
     bottom: 3.5rem;
   }
   #cursor {
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
   }
   #cursorPt {
     width: 7px;
