--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <title>SafeZone Postproduction</title>
   <meta name="description" content="Postproduktion für Bewegtbild mit Fokus auf Versionierung, Animation, Adaption uvm. – SafeZone Postproduction" />
   <meta name="robots" content="index, follow" />
+
+<!-- Canonical Tag -->
+<link rel="canonical" href="https://safezone-postproduction.de/">
+    
 <!-- Standard-Favicon für Browser -->
 <link rel="icon" type="image/png" sizes="48x48" href="Favicon_pink_48px.png">
 
