--- a/impressum.html
+++ b/impressum.html
@@ -364,7 +364,7 @@ body {
 
     <h2>Umsatzsteuer</h2>
     <p>
-      Umsatzsteuer-Identifikationsnummer gemäß § 27 a UStG: [wird nachgereicht]
+      Umsatzsteuer-Identifikationsnummer gemäß § 27 a UStG: DE456694675
     </p>
 
     <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
