Add LinkedIn link to footer and fix HTML structure

--- a/index.html
+++ b/index.html
@@ -2904,9 +2904,11 @@ body {
   </section>
   <footer class="site-footer">
   <div class="footer-links">
-    <a href="impressum.html" class="footer-link" id="footer-impressum">Impressum</a>
-    <span class="footer-sep">|</span>
-    <a href="datenschutz.html" class="footer-link" id="footer-datenschutz">Datenschutz</a>
+   <a href="impressum.html" class="footer-link" id="footer-impressum">Impressum</a>
+   <span class="footer-sep">|</span>
+   <a href="datenschutz.html" class="footer-link" id="footer-datenschutz">Datenschutz</a>
+   <span class="footer-sep">|</span>
+   <a href="https://www.linkedin.com/company/safezone-postproduction/" class="footer-link" id="footer-linkedin" target="_blank" rel="noopener" aria-label="SafeZone auf LinkedIn">LinkedIn</a>
   </div>
 </footer>
 </div>
